--- a/index.css
+++ b/index.css
@@ -14,6 +14,13 @@
 	transition: linear 0.5s;
 }
 
+#headers {
+	/*padding-right: 0;*/
+	/*margin-right: -2em;*/
+	background-color: rgba(12, 122, 86, 0.32) !important;
+
+}
+
 .home-button:hover {
 	color: #0C7A56;
 	text-shadow: 2px 2px 1px #E3CB80;
@@ -31,7 +38,8 @@
 
 
 .menu {
-	height: 800px;
+	/*height: 800px;*/
+	/*height: 100%;*/
 	background: url("images/menu-background.jpg") no-repeat;
 	background-size: cover;
 }
@@ -82,23 +90,40 @@
 	font-weight: normal;
 }
 
-@media screen and (max-width: 882px) {
+@media screen and (min-width: 768px) and (max-width: 845px) {
 	.menu a {
 		font-size: 2em;
 		text-align: left;
 		margin-left: -1em;
 		padding-left: 0;
 	}
+
 	.menu-item:first-child {
-		font-size: 0.8em;
 		padding-left: 0;
 		padding-right: 0;
-	}	
+	}
+
+	.contact-div {
+		margin: 0!important;
+		height: 14em !important;
+	}
+
+	.contact-item i {
+		display: block;
+	}
+
+	.email-link {
+		font-size: 90% !important;
+	}
+
+	.contact-item a {
+		padding-left: 1em;
+	}
 }
 
-@media screen and (max-width: 450px) {
-	.menu-item:first-child {
-		margin-left: 0.5em;
+@media screen and (max-width: 905px) {
+	.contact-div {
+		padding-left: 0 !important;
 	}
 }
 
@@ -113,25 +138,15 @@
 }
 
 .content {
-	height: 709px;
-	background-color: rgba(12, 122, 86, 0.32);
+	margin-top: -50em;
+	/*max-height: 9999px;*/
+	/*height: 709px;*/
+	/*background-color: rgba(12, 122, 86, 0.32);*/
 }
 
 @media screen and (max-width: 912px) {
 	.content {
-		height: 670px;
-	}
-}
-
-@media screen and (max-width: 600px) {
-	.content{
-		height: 646px;
-	}
-}
-
-@media screen and (max-width: 550px) {
-	.content {
-		height: 607px;
+		margin-top: -46em;
 	}
 }
 
@@ -181,6 +196,24 @@
 	font-size: 0.8em;
 }
 
+@media screen and (min-width: 768px) and (max-width: 825px) {
+	.content .intro {
+		margin-left: -0.1em;
+		margin-top: 10px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.content .intro {
+		margin-top: 18px;
+	}
+}
+
+@media screen and (max-width: 619px) {
+	.content .intro {
+		margin-left: 0;
+	}
+}
 
 .about-me-div img {
 	padding-top: 1em;
@@ -270,6 +303,8 @@
 .contact-div {
 	height: 9.5em;
 	background-color: #021615;
+	padding-right: 0 !important;
+	border-radius: 5px 5px ;
 }
 
 .linked-contact {
@@ -277,6 +312,8 @@
 }
 
 .contact-item:first-child {
+	font-size: 85%;
+	padding-right: 0;
 	padding-top: 0.5em;
 	padding-bottom: 0;
 }
@@ -285,13 +322,6 @@
 	color: #0C7A56;
 	padding-right: 0.8em;
 	font-size: 1.2em;
-}
-
-.contact-item p {
-	font-family: 'Josefin Sans', sans-serif;
-	color: #E3CB80;
-	font-size: 1em;
-	display: inline-block;
 }
 
 .contact-item a {
@@ -376,4 +406,54 @@
 	padding-top: 710px;
 	padding-bottom: 0;
 	font-size: 0.9em;
+}
+
+/*XS SCREEN STYLES*/
+@media screen and (max-width: 767px) {
+	html {
+		background-color: rgba(12, 122, 86, 0.32);
+	}
+	
+	.menu {
+		background: url(./images/menu-background-xs.jpg) no-repeat;
+	}
+
+	.menu-item {
+		padding-top: 0;
+	}
+
+	.menu-item:first-child {
+		padding-top: 0;
+	}
+
+	.main {
+		height: 80%;
+		padding-top: 1em;
+		padding-bottom: 0.5em;
+	}
+
+	.copyright {
+		padding-top: 370px;
+	}
+
+	.content {
+		margin-top: 0em;
+	}
+
+	.contact-item i {
+		padding-right: 1em;
+		padding-left: 30px;
+	}
+}
+
+@media screen and (max-width: 452px) {
+	.contact-item i {
+		padding-left: 20px;
+	}
+}
+
+@media screen and (max-width: 433px) {
+	.contact-item i {
+		padding-left: 0px;
+	}
 }
