--- a/index.css
+++ b/index.css
@@ -42,6 +42,13 @@
 	/*height: 100%;*/
 	background: url("images/menu-background.jpg") no-repeat;
 	background-size: cover;
+	width: 100%;
+}
+
+@media screen and (max-width: 851px) {
+	.content .intro .random-info {
+		font-size: 85%;
+	}
 }
 
 .glyphicon-triangle-bottom {
@@ -139,6 +146,7 @@
 
 .content {
 	margin-top: -50em;
+	width: 100%;
 	/*max-height: 9999px;*/
 	/*height: 709px;*/
 	/*background-color: rgba(12, 122, 86, 0.32);*/
@@ -152,8 +160,8 @@
 
 .content .intro {
 	margin-top: 30px;
-	height: 310px;
-	width: 550px;
+	height: 21em;
+	width: 39em;
 	background-color: #0C7A56;
 	position: absolute;
 	text-align: center;
@@ -179,6 +187,21 @@
 	font-weight: bold;
 	padding-top: 3vh;
 
+}
+
+@media screen and (max-width: 587px) {
+	.content .intro {
+		width: auto;
+		margin: 0;
+		padding: 0;
+	}
+	.content .intro img {
+		margin-left: 0;
+	}
+
+	.random-info {
+		padding-left: 0 !important;
+	}
 }
 
 .random-info li {
