--- a/index.css
+++ b/index.css
@@ -293,6 +293,7 @@
 
 .about-me-links {
 	margin-top: 1em;
+	margin-bottom: 1em;
 	height: 8em;
 	background-color: #0C7A56;
 	border-radius: 5px;
@@ -481,5 +482,18 @@
 @media screen and (max-width: 433px) {
 	.contact-item i {
 		padding-left: 0px;
+	}
+	.linked-contact-first {
+		font-size: 67% !important;
+	}
+	.random-info {
+		padding-left: 35px !important;
+		font-size: 90% !important;
+	}
+}
+
+@media screen and (max-width: 438px) {
+	.about-me-links li {
+		margin-left: -3em;
 	}
 }
