--- a/index.css
+++ b/index.css
@@ -28,7 +28,6 @@
 
 .header-font {
 	font-family: 'Raleway Dots', Helvetica;
-	font-weight: bold;
 	color: #E3CB80;
 }
 
@@ -276,6 +275,7 @@
 
 .about-me h2 {
 	text-align: center;
+	font-weight: 900;
 	color: #E3CB80;
 }
 
@@ -305,6 +305,7 @@
 .about-me-links h3 {
 	text-align: center;
 	margin: 0;
+	font-weight: 900;
 	padding: 0.5em 0 0 0;
 }
 
